--- a/index.html
+++ b/index.html
@@ -139,14 +139,34 @@
                     </div>
                     <div>
                         <a href="#">
-                            <img src="img/mirziyoyev.jpg" alt="mirziyoyev" height="190" width="386">
-                            <p>Мирзиёев рассказал, зачем было построено Сардобинское водохранилище</p>
+                            <img src="img/sardoba.jpg" alt="sardoba" height="190" width="386">
+                            <p>Обмелевшая Сардоба: стихия или человеческий фактор?</p>
                             <span>05:28 / 16.05.2020</span>
                         </a>
                     </div>
                 </div>
-                <div class="uzb_news_second">
-                
+                <div class="uzb_news_first">
+                    <div>
+                        <a href="#">
+                            <img src="img/police.jpg" alt="police" width="386" height="190">
+                            <p>Следствие проверяет четыре версии прорыва Сардобинской плотины</p>
+                            <span>05:28 / 16.05.2020</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="img/ambulance.jpg" alt="ambulance" width="386" height="190">
+                            <p>Выявлено еще 7 случаев коронавируса</p>
+                            <span>05:28 / 16.05.2020</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="img/military.jpg" alt="military" width="386" height="190">
+                            <p>Итоги второго месяца карантина</p>
+                            <span>05:28 / 16.05.2020</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
