--- a/index.html
+++ b/index.html
@@ -170,6 +170,138 @@
                 </div>
             </div>
         </section>
+        <section class="alert_wrapper">
+            <div class="alert">
+                <img src="img/bell.svg" alt="bell" width="31" height="35">
+                <p>Хотите узнать новости первыми? Подключите уведомления!</p>
+                <button type="button">Включит уведомления!</button>
+            </div>
+        </section> 
+        <section class="news_wrapper">
+            <div class="news">
+                <div class="news_main">
+                    <h3>Последние новости</h3>
+                    <div>
+                        <a href="#">
+                            <img src="img/pic_1.jpg" alt="pic_1" height="143" width="252">
+                            <div>
+                                <h4>По факту прорыва Сардобинского водохранилища возбуждено уголовное дело</h4>
+                                <p>После прорыва дамбы Сардобинского водохранилища возбуждено уголовное дело, сообщили в пресс-службе Генпрокуратуры
+                                    Узбекистана.</p>
+                                <div>
+                                    <img src="img/date.svg" alt="date" width="18" height="20">
+                                    <span>11:31 / 15.05.2020</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="img/pic_2.jpg" alt="pic_2" height="143" width="252">
+                            <div>
+                                <h4>Мирзиёев: «Нам следовало бы принять некоторые правила карантина как часть повседневной жизни»</h4>
+                                <p>Президент Узбекистана заявил, что после того, как угроза коронавируса исчезнет, в стране следовало бы принять некоторые правила периода карантина как часть своей повседневной жизни.</p>
+                                <div>
+                                    <img src="img/date.svg" alt="date" width="18" height="20">
+                                    <span>11:31 / 15.05.2020</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="img/pic_3.jpg" alt="pic_3" height="143" width="252">
+                            <div>
+                                <h4>В Ташкенте планируют ввести новую систему электронных проездных билетов</h4>
+                                <p>Целью этих изменений является максимально возможное сокращение количества других маршрутов на улицах, где проходят основные маршруты.</p>
+                                <div>
+                                    <img src="img/date.svg" alt="date" width="18" height="20">
+                                    <span>11:31 / 15.05.2020</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="img/pic_1.jpg" alt="pic_1" height="143" width="252">
+                            <div>
+                                <h4>По факту прорыва Сардобинского водохранилища возбуждено уголовное дело</h4>
+                                <p>После прорыва дамбы Сардобинского водохранилища возбуждено уголовное дело, сообщили в пресс-службе
+                                    Генпрокуратуры
+                                    Узбекистана.</p>
+                                <div>
+                                    <img src="img/date.svg" alt="date" width="18" height="20">
+                                    <span>11:31 / 15.05.2020</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="img/pic_2.jpg" alt="pic_2" height="143" width="252">
+                            <div>
+                                <h4>Мирзиёев: «Нам следовало бы принять некоторые правила карантина как часть повседневной жизни»</h4>
+                                <p>Президент Узбекистана заявил, что после того, как угроза коронавируса исчезнет, в стране следовало бы
+                                    принять некоторые правила периода карантина как часть своей повседневной жизни.</p>
+                                <div>
+                                    <img src="img/date.svg" alt="date" width="18" height="20">
+                                    <span>11:31 / 15.05.2020</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="img/pic_3.jpg" alt="pic_3" height="143" width="252">
+                            <div>
+                                <h4>В Ташкенте планируют ввести новую систему электронных проездных билетов</h4>
+                                <p>Целью этих изменений является максимально возможное сокращение количества других маршрутов на улицах, где
+                                    проходят основные маршруты.</p>
+                                <div>
+                                    <img src="img/date.svg" alt="date" width="18" height="20">
+                                    <span>11:31 / 15.05.2020</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="news_main_btn">
+                        <a href="#">
+                            Больше новостей
+                        </a>
+                    </div>
+                </div>
+                <div class="popular_news">
+                    <h3>Cамые популярные новости</h3>
+                    <div>
+                       <a href="#">
+                            <p>По факту прорыва Сардобинского водохранилища возбуждено уголовное дело</p>
+                            <span>11:31 / 15.05.2020</span>
+                       </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <p>По факту прорыва Сардобинского водохранилища возбуждено уголовное дело</p>
+                            <span>11:31 / 15.05.2020</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <p>По факту прорыва Сардобинского водохранилища возбуждено уголовное дело</p>
+                            <span>11:31 / 15.05.2020</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <p>По факту прорыва Сардобинского водохранилища возбуждено уголовное дело</p>
+                            <span>11:31 / 15.05.2020</span>
+                        </a>
+                    </div>
+                    <aside>
+                        <img src="img/ucell.jpg" alt="ucell" width="386" height="477">
+                    </aside>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
