--- a/index.html
+++ b/index.html
@@ -302,6 +302,21 @@
                 </div>
             </div>
         </section>
+        <section class="app_wrapper">
+            <div class="app">
+                <img src="img/phone.png" alt="phone" width="238" height="177">
+                <div>
+                    <h3>Всегда будьте в курсе последних новостей!</h3>
+                    <p>Установите мобильное приложение NAMANGANLIKLAR24 и все новости в вашем кармане!</p>
+                </div>
+                <a href="#">
+                    <img src="img/googleplay.png" alt="googleplay" width="163" height="50">
+                </a>
+                <a class="appstore" href="#">
+                    <img src="img/appstore.png" alt="googleplay" width="164" height="50">
+                </a>
+            </div>
+        </section>
     </main>
 </body>
 </html>
