--- a/index.html
+++ b/index.html
@@ -318,5 +318,57 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer_box">
+            <div class="footer_top">
+                <div>
+                    <a class="second_logo" href="#">
+                        <span>NAMANGANLIKLAR24</span>
+                    </a>
+                </div>
+                <p>Подписывайтесь на наш канал в Telegram и будьте всегда в курсе самых последних новостей:</p>
+                <div class="sign">
+                    <a href="#">
+                        <img src="img/Vector.svg" alt="Vector" width="18" height="20">
+                        <span>Подписатся</span>
+                    </a>
+                </div>
+            </div>
+            <div class="footer_end">
+                <div class="about">
+                    <h4>О сайте</h4>
+                    <p>Воспроизводство, копирование, тиражирование, распростране ние и иное использование информации с сайта
+                        «NAMANGANLIKLAR24.UZ» возможно только с предварительного письменного разрешения редакции.</p>
+                </div>
+                <ul class="second_col">
+                    <li>
+                        <a href="#">Информация о сайте</a>
+                    </li>
+                    <li>
+                        <a href="#">Напишите нам</a>
+                    </li>
+                    <li>
+                        <a href="#">Реклама</a>
+                    </li>
+                    <li>
+                        <a href="#">Прислать новость</a>
+                    </li>
+                </ul>
+                <div>
+                    <ul class="third_col">
+                        <li>
+                            <a href="#">Использование материалов</a>
+                        </li>
+                        <li>
+                            <a href="#">Темы дня</a>
+                        </li>
+                        <li>
+                            <a href="#">Наша команда</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
